<resources>
    <string name="app_name">BLE Demo</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No Data</string>

    <!--Transmitter-->
    <string name="title_uuid">UUID</string>
    <string name="title_major_value">Major Value</string>
    <string name="title_minor_value">Minor Value</string>
    <string name="title_beacon_format">Beacon Format</string>
    <string name="hint_uuid">94339309-bfe2-4807-b747-9aee23508620</string>
    <string name="hint_major_value">8</string>
    <string name="_hint_minor_value">2</string>
    <string name="start_advertising">Start Advertising</string>
    <string name="apply">Apply Changes</string>
</resources>
