<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_uuid"/>

        <EditText
            android:id="@+id/et_uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="2f234454-cf6d-4a0f-adf2-f4911ba9ffa6" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRandom"
            android:layout_marginTop="10dp"
            android:text="Generate UUID"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:text="@string/title_major_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_major_value" />

        <TextView
            android:text="@string/title_minor_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_minor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/_hint_minor_value" />

        <TextView
            android:text="@string/title_beacon_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/spinnerType"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_transmit"
            android:layout_marginTop="10dp"
            android:text="@string/start_advertising"
            android:background="@color/colorAccent"/>
    </LinearLayout>


</RelativeLayout>